feat: add test GitHub action and added tests